// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Reset cross signing > renders the cancelled page 1`] = `
<DocumentFragment>
  <div
    class="_layoutContainer_4402d3"
  >
    <header
      class="_pageHeading_5ba6c3"
    >
      <div
        class="_icon_5ba6c3 _invalid_5ba6c3"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.917 2.083a1 1 0 0 0-1.414 1.414L6.07 6.064q-1.905.27-3.32 1.686Q1 9.5 1 12t1.75 4.25T7 18a5.86 5.86 0 0 0 3.475-1.1A5.8 5.8 0 0 0 12.65 14H13l1.3 1.3q.15.15.325.213.175.062.375.062t.375-.062a1 1 0 0 0 .1-.044l5.028 5.028a1 1 0 0 0 1.414-1.414zm.67 11.33A1.93 1.93 0 0 1 5 12q0-.825.588-1.412A1.93 1.93 0 0 1 7 10q.824 0 1.412.588Q9 11.175 9 12q0 .824-.588 1.413A1.93 1.93 0 0 1 7 14q-.824 0-1.412-.587m14.899 1.423L15.65 10h4.95q.2 0 .387.075.189.075.338.225l1.025 1.025q.125.125.2.288t.075.362-.062.375a1.1 1.1 0 0 1-.188.325z"
          />
        </svg>
      </div>
      <div
        class="_header_5ba6c3"
      >
        <h1
          class="_title_5ba6c3"
        >
          Identity reset cancelled.
        </h1>
      </div>
    </header>
    <p
      class="_typography_6v6n8_153 _font-body-lg-regular_6v6n8_69 text-center text-secondary"
    >
      You can close this window and go back to the app to continue.
    </p>
    <p
      class="_typography_6v6n8_153 _font-body-lg-regular_6v6n8_69 text-center text-secondary"
    >
      If you're signed out everywhere and don't remember your recovery code, you'll still need to reset your identity.
    </p>
    <footer
      class="_legalFooter_acfd2c"
    >
      <nav>
        <a
          class="_link_1v5rz_8"
          data-kind="primary"
          data-size="medium"
          href="https://matrix.org/policy"
          rel="noreferrer noopener"
          title="Link to the service privacy policy"
        >
          Privacy Policy
        </a>
        <div
          aria-hidden="true"
          class="_separator_acfd2c"
        >
          •
        </div>
        <a
          class="_link_1v5rz_8"
          data-kind="primary"
          data-size="medium"
          href="https://matrix.org/tos"
          rel="noreferrer noopener"
          title="Link to the service terms and conditions"
        >
          Terms & Conditions
        </a>
      </nav>
      <p
        class="_imprint_acfd2c"
      >
        All Rights Reserved. The Super Chat name, logo and device are registered trade marks of BigCorp Ltd.
      </p>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`Reset cross signing > renders the deep link page 1`] = `
<DocumentFragment>
  <div
    class="_layoutContainer_4402d3"
  >
    <header
      class="_pageHeading_5ba6c3"
    >
      <div
        class="_icon_5ba6c3 _invalid_5ba6c3"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 17q.424 0 .713-.288A.97.97 0 0 0 13 16a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 15a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 16q0 .424.287.712.288.288.713.288m0-4q.424 0 .713-.287A.97.97 0 0 0 13 12V8a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 7a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 8v4q0 .424.287.713.288.287.713.287m0 9a9.7 9.7 0 0 1-3.9-.788 10.1 10.1 0 0 1-3.175-2.137q-1.35-1.35-2.137-3.175A9.7 9.7 0 0 1 2 12q0-2.075.788-3.9a10.1 10.1 0 0 1 2.137-3.175q1.35-1.35 3.175-2.137A9.7 9.7 0 0 1 12 2q2.075 0 3.9.788a10.1 10.1 0 0 1 3.175 2.137q1.35 1.35 2.137 3.175A9.7 9.7 0 0 1 22 12a9.7 9.7 0 0 1-.788 3.9 10.1 10.1 0 0 1-2.137 3.175q-1.35 1.35-3.175 2.137A9.7 9.7 0 0 1 12 22"
          />
        </svg>
      </div>
      <div
        class="_header_5ba6c3"
      >
        <h1
          class="_title_5ba6c3"
        >
          Reset your identity in case you can't confirm another way
        </h1>
      </div>
    </header>
    <p
      class="_typography_6v6n8_153 _font-body-md-regular_6v6n8_50 text-center text-secondary"
    >
      If you're not signed in to any other devices and you've lost your recovery key, then you'll need to reset your identity to continue using the app.
    </p>
    <ul
      class="_visual-list_15wzx_8"
    >
      <li
        class="_visual-list-item_1ma3e_8"
      >
        <svg
          aria-hidden="true"
          class="_visual-list-item-icon_1ma3e_17 _visual-list-item-icon-success_1ma3e_22"
          fill="currentColor"
          height="24px"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.55 17.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213L4.55 13q-.274-.274-.262-.713.012-.437.287-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275L9.55 15.15l8.475-8.475q.274-.275.713-.275.437 0 .712.275.275.274.275.713 0 .437-.275.712l-9.2 9.2q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
          />
        </svg>
        Your account details, contacts, preferences, and chat list will be kept
      </li>
      <li
        class="_visual-list-item_1ma3e_8"
      >
        <svg
          aria-hidden="true"
          class="_visual-list-item-icon_1ma3e_17"
          fill="currentColor"
          height="24px"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.288 7.288A.97.97 0 0 1 12 7q.424 0 .713.287Q13 7.576 13 8t-.287.713A.97.97 0 0 1 12 9a.97.97 0 0 1-.713-.287A.97.97 0 0 1 11 8q0-.424.287-.713m.001 4.001A.97.97 0 0 1 12 11q.424 0 .713.287.287.288.287.713v4q0 .424-.287.712A.97.97 0 0 1 12 17a.97.97 0 0 1-.713-.288A.97.97 0 0 1 11 16v-4q0-.424.287-.713"
          />
          <path
            clip-rule="evenodd"
            d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10m-2 0a8 8 0 1 1-16 0 8 8 0 0 1 16 0"
            fill-rule="evenodd"
          />
        </svg>
        You will lose any message history that's stored only on the server
      </li>
      <li
        class="_visual-list-item_1ma3e_8"
      >
        <svg
          aria-hidden="true"
          class="_visual-list-item-icon_1ma3e_17"
          fill="currentColor"
          height="24px"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.288 7.288A.97.97 0 0 1 12 7q.424 0 .713.287Q13 7.576 13 8t-.287.713A.97.97 0 0 1 12 9a.97.97 0 0 1-.713-.287A.97.97 0 0 1 11 8q0-.424.287-.713m.001 4.001A.97.97 0 0 1 12 11q.424 0 .713.287.287.288.287.713v4q0 .424-.287.712A.97.97 0 0 1 12 17a.97.97 0 0 1-.713-.288A.97.97 0 0 1 11 16v-4q0-.424.287-.713"
          />
          <path
            clip-rule="evenodd"
            d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10m-2 0a8 8 0 1 1-16 0 8 8 0 0 1 16 0"
            fill-rule="evenodd"
          />
        </svg>
        You will need to verify all your existing devices and contacts again
      </li>
    </ul>
    <p
      class="_typography_6v6n8_153 _font-body-md-semibold_6v6n8_55 text-center"
    >
      Only reset your identity if you don't have access to another signed-in device and you've lost your recovery key.
    </p>
    <button
      aria-disabled="false"
      class="_button_vczzf_8 _destructive_vczzf_107"
      data-kind="primary"
      data-size="lg"
      role="button"
      tabindex="0"
    >
      Finish reset
    </button>
    <a
      aria-disabled="false"
      class="_button_vczzf_8 _buttonLink_014cb0"
      data-kind="tertiary"
      data-size="lg"
      href="/reset-cross-signing/cancelled"
      role="link"
      tabindex="0"
    >
      Cancel
    </a>
    <footer
      class="_legalFooter_acfd2c"
    >
      <nav>
        <a
          class="_link_1v5rz_8"
          data-kind="primary"
          data-size="medium"
          href="https://matrix.org/policy"
          rel="noreferrer noopener"
          title="Link to the service privacy policy"
        >
          Privacy Policy
        </a>
        <div
          aria-hidden="true"
          class="_separator_acfd2c"
        >
          •
        </div>
        <a
          class="_link_1v5rz_8"
          data-kind="primary"
          data-size="medium"
          href="https://matrix.org/tos"
          rel="noreferrer noopener"
          title="Link to the service terms and conditions"
        >
          Terms & Conditions
        </a>
      </nav>
      <p
        class="_imprint_acfd2c"
      >
        All Rights Reserved. The Super Chat name, logo and device are registered trade marks of BigCorp Ltd.
      </p>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`Reset cross signing > renders the errored page 1`] = `
<DocumentFragment>
  <div
    class="_layoutContainer_4402d3"
  >
    <header
      class="_pageHeading_5ba6c3"
    >
      <div
        class="_icon_5ba6c3 _invalid_5ba6c3"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 17q.424 0 .713-.288A.97.97 0 0 0 13 16a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 15a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 16q0 .424.287.712.288.288.713.288m0-4q.424 0 .713-.287A.97.97 0 0 0 13 12V8a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 7a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 8v4q0 .424.287.713.288.287.713.287m0 9a9.7 9.7 0 0 1-3.9-.788 10.1 10.1 0 0 1-3.175-2.137q-1.35-1.35-2.137-3.175A9.7 9.7 0 0 1 2 12q0-2.075.788-3.9a10.1 10.1 0 0 1 2.137-3.175q1.35-1.35 3.175-2.137A9.7 9.7 0 0 1 12 2q2.075 0 3.9.788a10.1 10.1 0 0 1 3.175 2.137q1.35 1.35 2.137 3.175A9.7 9.7 0 0 1 22 12a9.7 9.7 0 0 1-.788 3.9 10.1 10.1 0 0 1-2.137 3.175q-1.35 1.35-3.175 2.137A9.7 9.7 0 0 1 12 22"
          />
        </svg>
      </div>
      <div
        class="_header_5ba6c3"
      >
        <h1
          class="_title_5ba6c3"
        >
          Failed to allow crypto identity reset
        </h1>
      </div>
    </header>
    <p
      class="_typography_6v6n8_153 _font-body-md-regular_6v6n8_50 text-center text-secondary"
    >
      This might be a temporary problem, so please try again later. If the problem persists, please contact your server administrator.
    </p>
    <button
      class="_button_vczzf_8"
      data-kind="tertiary"
      data-size="lg"
      role="button"
      tabindex="0"
    >
      Back
    </button>
    <footer
      class="_legalFooter_acfd2c"
    >
      <nav>
        <a
          class="_link_1v5rz_8"
          data-kind="primary"
          data-size="medium"
          href="https://matrix.org/policy"
          rel="noreferrer noopener"
          title="Link to the service privacy policy"
        >
          Privacy Policy
        </a>
        <div
          aria-hidden="true"
          class="_separator_acfd2c"
        >
          •
        </div>
        <a
          class="_link_1v5rz_8"
          data-kind="primary"
          data-size="medium"
          href="https://matrix.org/tos"
          rel="noreferrer noopener"
          title="Link to the service terms and conditions"
        >
          Terms & Conditions
        </a>
      </nav>
      <p
        class="_imprint_acfd2c"
      >
        All Rights Reserved. The Super Chat name, logo and device are registered trade marks of BigCorp Ltd.
      </p>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`Reset cross signing > renders the page 1`] = `
<DocumentFragment>
  <div
    class="_layoutContainer_4402d3"
  >
    <header
      class="_pageHeading_5ba6c3"
    >
      <div
        class="_icon_5ba6c3 _invalid_5ba6c3"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 17q.424 0 .713-.288A.97.97 0 0 0 13 16a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 15a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 16q0 .424.287.712.288.288.713.288m0-4q.424 0 .713-.287A.97.97 0 0 0 13 12V8a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 7a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 8v4q0 .424.287.713.288.287.713.287m0 9a9.7 9.7 0 0 1-3.9-.788 10.1 10.1 0 0 1-3.175-2.137q-1.35-1.35-2.137-3.175A9.7 9.7 0 0 1 2 12q0-2.075.788-3.9a10.1 10.1 0 0 1 2.137-3.175q1.35-1.35 3.175-2.137A9.7 9.7 0 0 1 12 2q2.075 0 3.9.788a10.1 10.1 0 0 1 3.175 2.137q1.35 1.35 2.137 3.175A9.7 9.7 0 0 1 22 12a9.7 9.7 0 0 1-.788 3.9 10.1 10.1 0 0 1-2.137 3.175q-1.35 1.35-3.175 2.137A9.7 9.7 0 0 1 12 22"
          />
        </svg>
      </div>
      <div
        class="_header_5ba6c3"
      >
        <h1
          class="_title_5ba6c3"
        >
          Reset your identity in case you can't confirm another way
        </h1>
      </div>
    </header>
    <p
      class="_typography_6v6n8_153 _font-body-md-regular_6v6n8_50 text-center text-secondary"
    >
      If you're not signed in to any other devices and you've lost your recovery key, then you'll need to reset your identity to continue using the app.
    </p>
    <ul
      class="_visual-list_15wzx_8"
    >
      <li
        class="_visual-list-item_1ma3e_8"
      >
        <svg
          aria-hidden="true"
          class="_visual-list-item-icon_1ma3e_17 _visual-list-item-icon-success_1ma3e_22"
          fill="currentColor"
          height="24px"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.55 17.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213L4.55 13q-.274-.274-.262-.713.012-.437.287-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275L9.55 15.15l8.475-8.475q.274-.275.713-.275.437 0 .712.275.275.274.275.713 0 .437-.275.712l-9.2 9.2q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
          />
        </svg>
        Your account details, contacts, preferences, and chat list will be kept
      </li>
      <li
        class="_visual-list-item_1ma3e_8"
      >
        <svg
          aria-hidden="true"
          class="_visual-list-item-icon_1ma3e_17"
          fill="currentColor"
          height="24px"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.288 7.288A.97.97 0 0 1 12 7q.424 0 .713.287Q13 7.576 13 8t-.287.713A.97.97 0 0 1 12 9a.97.97 0 0 1-.713-.287A.97.97 0 0 1 11 8q0-.424.287-.713m.001 4.001A.97.97 0 0 1 12 11q.424 0 .713.287.287.288.287.713v4q0 .424-.287.712A.97.97 0 0 1 12 17a.97.97 0 0 1-.713-.288A.97.97 0 0 1 11 16v-4q0-.424.287-.713"
          />
          <path
            clip-rule="evenodd"
            d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10m-2 0a8 8 0 1 1-16 0 8 8 0 0 1 16 0"
            fill-rule="evenodd"
          />
        </svg>
        You will lose any message history that's stored only on the server
      </li>
      <li
        class="_visual-list-item_1ma3e_8"
      >
        <svg
          aria-hidden="true"
          class="_visual-list-item-icon_1ma3e_17"
          fill="currentColor"
          height="24px"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.288 7.288A.97.97 0 0 1 12 7q.424 0 .713.287Q13 7.576 13 8t-.287.713A.97.97 0 0 1 12 9a.97.97 0 0 1-.713-.287A.97.97 0 0 1 11 8q0-.424.287-.713m.001 4.001A.97.97 0 0 1 12 11q.424 0 .713.287.287.288.287.713v4q0 .424-.287.712A.97.97 0 0 1 12 17a.97.97 0 0 1-.713-.288A.97.97 0 0 1 11 16v-4q0-.424.287-.713"
          />
          <path
            clip-rule="evenodd"
            d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10m-2 0a8 8 0 1 1-16 0 8 8 0 0 1 16 0"
            fill-rule="evenodd"
          />
        </svg>
        You will need to verify all your existing devices and contacts again
      </li>
    </ul>
    <p
      class="_typography_6v6n8_153 _font-body-md-semibold_6v6n8_55 text-center"
    >
      Only reset your identity if you don't have access to another signed-in device and you've lost your recovery key.
    </p>
    <button
      aria-disabled="false"
      class="_button_vczzf_8 _destructive_vczzf_107"
      data-kind="primary"
      data-size="lg"
      role="button"
      tabindex="0"
    >
      Finish reset
    </button>
    <a
      aria-disabled="false"
      class="_button_vczzf_8 _buttonLink_014cb0"
      data-kind="tertiary"
      data-size="lg"
      href="/"
      role="link"
      tabindex="0"
    >
      Back
    </a>
    <footer
      class="_legalFooter_acfd2c"
    >
      <nav>
        <a
          class="_link_1v5rz_8"
          data-kind="primary"
          data-size="medium"
          href="https://matrix.org/policy"
          rel="noreferrer noopener"
          title="Link to the service privacy policy"
        >
          Privacy Policy
        </a>
        <div
          aria-hidden="true"
          class="_separator_acfd2c"
        >
          •
        </div>
        <a
          class="_link_1v5rz_8"
          data-kind="primary"
          data-size="medium"
          href="https://matrix.org/tos"
          rel="noreferrer noopener"
          title="Link to the service terms and conditions"
        >
          Terms & Conditions
        </a>
      </nav>
      <p
        class="_imprint_acfd2c"
      >
        All Rights Reserved. The Super Chat name, logo and device are registered trade marks of BigCorp Ltd.
      </p>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`Reset cross signing > renders the success page 1`] = `
<DocumentFragment>
  <div
    class="_layoutContainer_4402d3"
  >
    <header
      class="_pageHeading_5ba6c3"
    >
      <div
        class="_icon_5ba6c3 _success_5ba6c3"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m10.6 13.8-2.15-2.15a.95.95 0 0 0-.7-.275.95.95 0 0 0-.7.275.95.95 0 0 0-.275.7q0 .425.275.7L9.9 15.9q.3.3.7.3t.7-.3l5.65-5.65a.95.95 0 0 0 .275-.7.95.95 0 0 0-.275-.7.95.95 0 0 0-.7-.275.95.95 0 0 0-.7.275zM12 22a9.7 9.7 0 0 1-3.9-.788 10.1 10.1 0 0 1-3.175-2.137q-1.35-1.35-2.137-3.175A9.7 9.7 0 0 1 2 12q0-2.075.788-3.9a10.1 10.1 0 0 1 2.137-3.175q1.35-1.35 3.175-2.137A9.7 9.7 0 0 1 12 2q2.075 0 3.9.788a10.1 10.1 0 0 1 3.175 2.137q1.35 1.35 2.137 3.175A9.7 9.7 0 0 1 22 12a9.7 9.7 0 0 1-.788 3.9 10.1 10.1 0 0 1-2.137 3.175q-1.35 1.35-3.175 2.137A9.7 9.7 0 0 1 12 22"
          />
        </svg>
      </div>
      <div
        class="_header_5ba6c3"
      >
        <h1
          class="_title_5ba6c3"
        >
          Identity reset successfully. Go back to the app to finish the process.
        </h1>
      </div>
    </header>
    <p
      class="_typography_6v6n8_153 _font-body-md-regular_6v6n8_50 text-center text-secondary"
    >
      The identity reset has been approved for the next 10 minutes. You can close this window and go back to the app to continue.
    </p>
  </div>
</DocumentFragment>
`;

exports[`Reset cross signing > renders the success page 2`] = `
<DocumentFragment>
  <div
    class="_layoutContainer_4402d3"
  >
    <header
      class="_pageHeading_5ba6c3"
    >
      <div
        class="_icon_5ba6c3 _success_5ba6c3"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m10.6 13.8-2.15-2.15a.95.95 0 0 0-.7-.275.95.95 0 0 0-.7.275.95.95 0 0 0-.275.7q0 .425.275.7L9.9 15.9q.3.3.7.3t.7-.3l5.65-5.65a.95.95 0 0 0 .275-.7.95.95 0 0 0-.275-.7.95.95 0 0 0-.7-.275.95.95 0 0 0-.7.275zM12 22a9.7 9.7 0 0 1-3.9-.788 10.1 10.1 0 0 1-3.175-2.137q-1.35-1.35-2.137-3.175A9.7 9.7 0 0 1 2 12q0-2.075.788-3.9a10.1 10.1 0 0 1 2.137-3.175q1.35-1.35 3.175-2.137A9.7 9.7 0 0 1 12 2q2.075 0 3.9.788a10.1 10.1 0 0 1 3.175 2.137q1.35 1.35 2.137 3.175A9.7 9.7 0 0 1 22 12a9.7 9.7 0 0 1-.788 3.9 10.1 10.1 0 0 1-2.137 3.175q-1.35 1.35-3.175 2.137A9.7 9.7 0 0 1 12 22"
          />
        </svg>
      </div>
      <div
        class="_header_5ba6c3"
      >
        <h1
          class="_title_5ba6c3"
        >
          Identity reset successfully. Go back to the app to finish the process.
        </h1>
      </div>
    </header>
    <p
      class="_typography_6v6n8_153 _font-body-md-regular_6v6n8_50 text-center text-secondary"
    >
      The identity reset has been approved for the next 10 minutes. You can close this window and go back to the app to continue.
    </p>
  </div>
</DocumentFragment>
`;
